feat(airflow): support settings/colors/security

--- a/airflow/files/default/airflow.cfg.jinja
+++ b/airflow/files/default/airflow.cfg.jinja
@@ -6,11 +6,11 @@
 [core]
 # The folder where your airflow pipelines live, most likely a
 # subfolder in a code repository. This path must be absolute.
-dags_folder = {{ config.dags_folder or '/home/airflow/airflow/dags' }}
+dags_folder = {{ config.core.dags_folder or '/home/airflow/airflow/dags' }}
 
 # The folder where airflow should store its log files
 # This path must be absolute
-base_log_folder = {{ config.base_log_folder or '/home/airflow/airflow/logs' }}
+base_log_folder = {{ config.core.base_log_folder or '/home/airflow/airflow/logs' }}
 
 # Airflow can store logs remotely in AWS S3, Google Cloud Storage or Elastic Search.
 # Set this to True if you want to enable remote logging.
@@ -72,16 +72,16 @@ hostname_callable = socket:getfqdn
 
 # Default timezone in case supplied date times are naive
 # can be utc (default), system, or any IANA timezone string (e.g. Europe/Amsterdam)
-default_timezone = {{ config.default_timezone or 'utc' }}
+default_timezone = {{ config.core.default_timezone or 'utc' }}
 
 # The executor class that airflow should use. Choices include
 # SequentialExecutor, LocalExecutor, CeleryExecutor, DaskExecutor, KubernetesExecutor
-executor = {{ config.executor or 'SequentialExecutor' }}
+executor = {{ config.core.executor or 'SequentialExecutor' }}
 
 # The SqlAlchemy connection string to the metadata database.
 # SqlAlchemy supports many different database engine, more information
 # their website
-sql_alchemy_conn = {{ config.sql_alchemy_conn or 'sqlite:////home/airflow/airflow/airflow.db' }}
+sql_alchemy_conn = {{ config.core.sql_alchemy_conn or 'sqlite:////home/airflow/airflow/airflow.db' }}
 
 # The encoding for the databases
 sql_engine_encoding = utf-8
@@ -297,6 +297,7 @@ default_gpus = 0
 default_hive_mapred_queue =
 
 [webserver]
+auth_backend = {{ config.webserver.auth_backend or '' }}
 # The base url of your website as airflow cannot guess what domain or
 # cname you are using. This is used in automated emails that
 # airflow sends to point links to the right web server
@@ -368,7 +369,7 @@ expose_stacktrace = True
 
 # Set to true to turn on authentication:
 # https://airflow.apache.org/security.html#web-authentication
-authenticate = False
+authenticate = {{ config.webserver.authenticate }}
 
 # Filter the list of dags by owner name (requires authentication to be enabled)
 filter_by_owner = False
@@ -523,7 +524,7 @@ worker_log_server_port = 8793
 # a sqlalchemy database. Refer to the Celery documentation for more
 # information.
 # http://docs.celeryproject.org/en/latest/userguide/configuration.html#broker-settings
-broker_url = {{ config.broker_url or 'sqla+mysql://airflow:airflow@localhost:3306/airflow' }}
+broker_url = {{ config.celery.broker_url or 'sqla+mysql://airflow:airflow@localhost:3306/airflow' }}
 
 # The Celery result_backend. When a job finishes, it needs to update the
 # metadata of the job. Therefore it will post a message on a message bus,
@@ -531,7 +532,7 @@ broker_url = {{ config.broker_url or 'sqla+mysql://airflow:airflow@localhost:330
 # This status is used by the scheduler to update the state of the task
 # The use of a database is highly recommended
 # http://docs.celeryproject.org/en/latest/userguide/configuration.html#task-result-backend-settings
-result_backend = {{ config.result_backend or 'db+mysql://airflow:airflow@localhost:3306/airflow' }}
+result_backend = {{ config.celery.result_backend or 'db+mysql://airflow:airflow@localhost:3306/airflow' }}
 
 # Celery Flower is a sweet UI for Celery. Airflow has a shortcut to start
 # it ``airflow flower``. This defines the IP that Celery Flower runs on
