--- a/airflow/files/default/airflow.cfg.jinja
+++ b/airflow/files/default/airflow.cfg.jinja
@@ -143,7 +143,7 @@ max_active_runs_per_dag = 16
 # Whether to load the DAG examples that ship with Airflow. It's good to
 # get started, but you probably want to set this to False in a production
 # environment
-load_examples = True
+load_examples = {{ config.core.load_examples or True }}
 
 # Whether to load the default connections that ship with Airflow. It's good to
 # get started, but you probably want to set this to False in a production
