--- a/airflow/files/default/airflow.cfg.jinja
+++ b/airflow/files/default/airflow.cfg.jinja
@@ -343,7 +343,7 @@ reload_on_plugin_change = False
 
 # Secret key used to run your flask app
 # It should be as random as possible
-secret_key = temporary_key
+secret_key = {{ config.webserver.secret_key or 'temporary_key' }}
 
 # Number of workers to run the Gunicorn web server
 workers = 4
