fix(initdb): support airflow 2.0 syntax

--- a/airflow/map.jinja
+++ b/airflow/map.jinja
@@ -37,6 +37,10 @@
 {%- set url = p.uri_c|replace('VERSION', p.version)|replace('PYVER', pyver) %}
 {%- do data.pkg.airflow.update({'constraint_file': url}) %}
 
+{%- if p.version.split('.')[0] == 1 %}
+    {% do data.config.airflow.update({ 'initcmd': 'initdb'}) %}
+{%- endif %}
+
 {%- if grains.kernel|lower == 'linux' and p.use_upstream|lower == 'archive' %}
     {%- set path = '%s/%s-%s/bin/'|format(data.dir.airflow.base, p.name, p.version) %}
     {%- do data.config.airflow.update({ 'path': path }) %}
