--- a/airflow/files/default/airflow.cfg.jinja
+++ b/airflow/files/default/airflow.cfg.jinja
@@ -7,7 +7,7 @@
 
 # The folder where airflow should store its log files
 # This path must be absolute
-base_log_folder = {{ config.core.base_log_folder or '/home/airflow/airflow/logs' }}
+base_log_folder = {{ cfg.core.base_log_folder or airflow_home ~ '/logs' }}
 
 # Airflow can store logs remotely in AWS S3, Google Cloud Storage or Elastic Search.
 # Set this to True if you want to enable remote logging.
@@ -51,7 +51,7 @@ log_processor_filename_template: {{ filename }}.log
 
 {% endraw %}
 
-dag_processor_manager_log_location = /home/airflow/airflow/logs/dag_processor_manager/dag_processor_manager.log
+dag_processor_manager_log_location = {{ cfg.core.base_log_folder or airflow_home ~ '/logs' }}/dag_processor_manager/dag_processor_manager.log
 
 # Name of handler to read task instance logs.
 # Default to use task handler.
@@ -61,7 +61,7 @@ task_log_reader = task
 
 # The folder where your airflow pipelines live, most likely a
 # subfolder in a code repository. This path must be absolute.
-dags_folder = {{ config.core.dags_folder or '/home/airflow/airflow/dags' }}
+dags_folder = {{ cfg.core.dags_folder or airflow_home ~ '/dags' }}
 
 
 # Hostname by providing a path to a callable, which will resolve the hostname.
@@ -76,22 +76,22 @@ hostname_callable = {{ 'socket.getfqdn' if airversion|int == 2 else 'socket:getf
 
 # Default timezone in case supplied date times are naive
 # can be utc (default), system, or any IANA timezone string (e.g. Europe/Amsterdam)
-default_timezone = {{ config.core.default_timezone or 'utc' }}
+default_timezone = {{ cfg.core.default_timezone or 'utc' }}
 
 # The executor class that airflow should use. Choices include
 # SequentialExecutor, LocalExecutor, CeleryExecutor, DaskExecutor, KubernetesExecutor
-executor = {{ config.core.executor or 'CeleryExecutor' }}
+executor = {{ cfg.core.executor or 'CeleryExecutor' }}
 
 # The SqlAlchemy connection string to the metadata database.
 # SqlAlchemy supports many different database engine, more information
 # their website
-sql_alchemy_conn = {{ config.core.sql_alchemy_conn or 'sqlite:////home/airflow/airflow/airflow.db' }}
+sql_alchemy_conn = {{ cfg.core.sql_alchemy_conn or 'sqlite:////home/airflow/airflow/airflow.db' }}
 
 # The encoding for the databases
 sql_engine_encoding = utf-8
 
 # If SqlAlchemy should pool database connections.
-sql_alchemy_pool_enabled = True
+sql_alchemy_pool_enabled = {{ cfg.core.sql_alchemy_pool_enabled }}
 
 # The SqlAlchemy pool size is the maximum number of database connections
 # in the pool. 0 indicates no limit.
@@ -106,13 +106,13 @@ sql_alchemy_pool_size = 5
 # and the total number of "sleeping" connections the pool will allow is pool_size.
 # max_overflow can be set to -1 to indicate no overflow limit;
 # no limit will be placed on the total number of concurrent connections. Defaults to 10.
-sql_alchemy_max_overflow = 10
+sql_alchemy_max_overflow = {{ cfg.core.sql_alchemy_max_overflow }}
 
 # The SqlAlchemy pool recycle is the number of seconds a connection
 # can be idle in the pool before it is invalidated. This config does
 # not apply to sqlite. If the number of DB connections is ever exceeded,
 # a lower config value will allow the system to recover faster.
-sql_alchemy_pool_recycle = 1800
+sql_alchemy_pool_recycle = {{ cfg.core.sql_alchemy_pool_recycle }}
 
 # Check connection at the start of each connection pool checkout.
 # Typically, this is a simple statement like "SELECT 1".
@@ -133,21 +133,21 @@ sql_alchemy_schema =
 # The amount of parallelism as a setting to the executor. This defines
 # the max number of task instances that should run simultaneously
 # on this airflow installation
-parallelism = 32
+parallelism = {{ cfg.core.parallelism }}
 
 # The number of task instances allowed to run concurrently by the scheduler
-dag_concurrency = 16
+dag_concurrency = {{ cfg.core.dag_concurrency }}
 
 # Are DAGs paused by default at creation
 dags_are_paused_at_creation = True
 
 # The maximum number of active DAG runs per DAG
-max_active_runs_per_dag = 16
+max_active_runs_per_dag = {{ cfg.core.max_active_runs_per_dag }}
 
 # Whether to load the DAG examples that ship with Airflow. It's good to
 # get started, but you probably want to set this to False in a production
 # environment
-load_examples = {{ config.core.load_examples or True }}
+load_examples = {{ cfg.core.load_examples or True }}
 
 # Whether to load the default connections that ship with Airflow. It's good to
 # get started, but you probably want to set this to False in a production
@@ -155,7 +155,7 @@ load_examples = {{ config.core.load_examples or True }}
 load_default_connections = True
 
 # Where your Airflow plugins are stored
-plugins_folder = /home/airflow/airflow/plugins
+plugins_folder = {{ cfg.core.plugins_folder or airflow_home ~ '/plugins' }}
 
 # Secret key to save connection passwords in the db
 fernet_key = kccQvkfGdFN-g_0B1MurFqj6n4zqo3gAYRcDvD5HoGY=
@@ -164,10 +164,10 @@ fernet_key = kccQvkfGdFN-g_0B1MurFqj6n4zqo3gAYRcDvD5HoGY=
 donot_pickle = False
 
 # How long before timing out a python file import
-dagbag_import_timeout = 30
+dagbag_import_timeout = {{ cfg.core.dagbag_import_timeout }}
 
 # How long before timing out a DagFileProcessor, which processes a dag file
-dag_file_processor_timeout = 50
+dag_file_processor_timeout = {{ cfg.core.dag_file_processor_timeout }}
 
 # The class to use for running task instances in a subprocess
 task_runner = StandardTaskRunner
@@ -177,11 +177,11 @@ task_runner = StandardTaskRunner
 default_impersonation =
 
 # What security module to use (for example kerberos)
-security =
+security = {{ cfg.core.security }}
 
 # If set to False enables some unsecure features like Charts and Ad Hoc Queries.
 # In 2.0 will default to True.
-secure_mode = False
+secure_mode = True
 
 # Turn unit test mode on (overwrites many configuration options with test
 # values at runtime)
@@ -246,13 +246,13 @@ xcom_backend = airflow.models.xcom.BaseXCom
 [secrets]
 # Full class name of secrets backend to enable (will precede env vars and metastore in search path)
 # Example: backend = airflow.contrib.secrets.aws_systems_manager.SystemsManagerParameterStoreBackend
-backend =
+backend = {{ cfg.secrets.backend }}
 
 # The backend_kwargs param is loaded into a dictionary and passed to __init__ of secrets backend class.
 # See documentation for the secrets backend you are using. JSON is expected.
 # Example for AWS Systems Manager ParameterStore:
 # ``{"connections_prefix": "/airflow/connections", "profile_name": "default"}``
-backend_kwargs =
+backend_kwargs = {{ cfg.secrets.backend_kwargs }}
 
 [cli]
 # In what way should the cli access the API. The LocalClient will use the
@@ -301,7 +301,7 @@ default_gpus = 0
 default_hive_mapred_queue =
 
 [webserver]
-auth_backend = {{ config.webserver.auth_backend or '' }}
+auth_backend = {{ cfg.webserver.auth_backend or '' }}
 # The base url of your website as airflow cannot guess what domain or
 # cname you are using. This is used in automated emails that
 # airflow sends to point links to the right web server
@@ -347,7 +347,7 @@ reload_on_plugin_change = False
 
 # Secret key used to run your flask app
 # It should be as random as possible
-secret_key = {{ config.webserver.secret_key or 'temporary_key' }}
+secret_key = {{ cfg.webserver.secret_key or 'temporary_key' }}
 
 # Number of workers to run the Gunicorn web server
 workers = 4
@@ -363,7 +363,7 @@ access_logfile = -
 error_logfile = -
 
 # Expose the configuration file in the web server
-expose_config = {{ config.webserver.expose_config }}
+expose_config = {{ cfg.webserver.expose_config }}
 
 # Expose hostname in the web server
 expose_hostname = True
@@ -373,7 +373,7 @@ expose_stacktrace = True
 
 # Set to true to turn on authentication:
 # https://airflow.apache.org/security.html#web-authentication
-authenticate = {{ config.webserver.authenticate }}
+authenticate = {{ cfg.webserver.authenticate }}
 
 # Filter the list of dags by owner name (requires authentication to be enabled)
 filter_by_owner = False
@@ -449,7 +449,7 @@ proxy_fix_x_prefix = 1
 cookie_secure = False
 
 # Set samesite policy on session cookie
-cookie_samesite = {{ config.webserver.cookie_samesite or 'Lax' }}
+cookie_samesite = {{ cfg.webserver.cookie_samesite or 'Lax' }}
 
 # Default setting for wrap toggle on DAG code and TI log views.
 default_wrap = False
@@ -528,7 +528,7 @@ worker_log_server_port = 8793
 # a sqlalchemy database. Refer to the Celery documentation for more
 # information.
 # http://docs.celeryproject.org/en/latest/userguide/configuration.html#broker-settings
-broker_url = {{ config.celery.broker_url or 'sqla+mysql://airflow:airflow@localhost:3306/airflow' }}
+broker_url = {{ cfg.celery.broker_url or 'sqla+mysql://airflow:airflow@localhost:3306/airflow' }}
 
 # The Celery result_backend. When a job finishes, it needs to update the
 # metadata of the job. Therefore it will post a message on a message bus,
@@ -536,7 +536,7 @@ broker_url = {{ config.celery.broker_url or 'sqla+mysql://airflow:airflow@localh
 # This status is used by the scheduler to update the state of the task
 # The use of a database is highly recommended
 # http://docs.celeryproject.org/en/latest/userguide/configuration.html#task-result-backend-settings
-result_backend = {{ config.celery.result_backend or 'db+mysql://airflow:airflow@localhost:3306/airflow' }}
+result_backend = {{ cfg.celery.result_backend or 'db+mysql://airflow:airflow@localhost:3306/airflow' }}
 
 # Celery Flower is a sweet UI for Celery. Airflow has a shortcut to start
 # it ``airflow flower``. This defines the IP that Celery Flower runs on
@@ -643,7 +643,7 @@ print_stats_interval = 30
 # ago (in seconds), scheduler is considered unhealthy.
 # This is used by the health check in the "/health" endpoint
 scheduler_health_check_threshold = 30
-child_process_log_directory = /home/airflow/airflow/logs/scheduler
+child_process_log_directory = {{ cfg.scheduler.child_process_log_directory or airflow_home ~ '/logs/scheduler' }}
 
 # Local task jobs periodically heartbeat to the DB. If the job has
 # not heartbeat in this many seconds, the scheduler will mark the
