--- a/airflow/files/default/airflowV1.cfg.jinja
+++ b/airflow/files/default/airflowV1.cfg.jinja
@@ -2,10 +2,13 @@
 # File managed by Salt at <{{ source }}>.
 # Your changes may be overwritten.
 ########################################################################
-{%- set c = cfg %}
-# airflow v1
+{%- set c = content %}
 {%- set logs = airflow_home ~ '/logs' if 'base_log_folder' not in c.core else c.core.base_log_folder %}
-{%- set base_url = 'http://localhost:8080' if 'base_url' not in c.webserver else c.webserver.base_url %}
+
+{%- set f = flask %}
+{%- set basehost = '0.0.0.0' if 'web_server_host' not in f.webserver else f.webserver.web_server_host %}
+{%- set baseport = '18080' if 'web_server_port' not in f.webserver else f.webserver.web_server_port %}
+{%- set baseurl = basehost ~ ':' ~ baseport %}
 
 [core]
 # The folder where airflow should store its log files
@@ -263,7 +266,7 @@ api_client = {{ 'airflow.api.client.local_client' if 'api_client' not in c.cli e
 # If you set web_server_url_prefix, do NOT forget to append it here, ex:
 # ``endpoint_url = http://localhost:8080/myroot``
 # So api will look like: ``http://localhost:8080/myroot/api/experimental/...``
-endpoint_url = {{ base_url }}{{ '' if 'endpoint_url' not in c.cli else c.cli.endpoint_url }}
+endpoint_url = http://{{ baseurl|string }}/myroot
 
 [debug]
 # Used only with DebugExecutor. If set to True DAG will fail with first
@@ -305,19 +308,25 @@ auth_backend = {{ '' if 'auth_backend' not in c.webserver else c.webserver.auth_
 # The base url of your website as airflow cannot guess what domain or
 # cname you are using. This is used in automated emails that
 # airflow sends to point links to the right web server
-base_url = {{ base_url }}
+base_url = {{ baseurl|string }}
 
-# Default timezone to display all dates in the RBAC UI, can be UTC, system, or
+# Default timezone to display all dates in the UI, can be UTC, system, or
 # any IANA timezone string (e.g. Europe/Amsterdam). If left empty the
 # default value of core/default_timezone will be used
 # Example: default_ui_timezone = America/New_York
 default_ui_timezone = UTC
 
 # The ip specified when starting the web server
-web_server_host = {{ '0.0.0.0' if 'web_server_host' not in c.webserver else c.webserver.web_server_host }}
+web_server_host = {{ basehost }}
 
 # The port on which to run the web server
-web_server_port = {{ '8080' if 'web_server_port' not in c.webserver else c.webserver.web_server_port }}
+web_server_port = {{ baseport }}
+
+# Default timezone to display all dates in the RBAC UI, can be UTC, system, or
+# any IANA timezone string (e.g. Europe/Amsterdam). If left empty the
+# default value of core/default_timezone will be used
+# Example: default_ui_timezone = America/New_York
+default_ui_timezone = UTC
 
 # Paths to the SSL certificate and key for the web server. When both are
 # provided SSL will be enabled. This does not change the web server port.
