--- a/airflow/files/default/webserver_config.py.jinja
+++ b/airflow/files/default/webserver_config.py.jinja
@@ -2,7 +2,8 @@
 # File managed by Salt at <'{{ source }}'>.
 # Your changes may be overwritten.
 ########################################################################
-{%- set c = cfg %}
+{%- set c = content %}
+{%- set f = flask %}
 #
 # Licensed to the Apache Software Foundation (ASF) under one
 # or more contributor license agreements.  See the NOTICE file
@@ -23,7 +24,7 @@
 """Default configuration for the Airflow webserver"""
 import os
 
-from flask_appbuilder.security.manager import {{ "AUTH_DB" if "auth_type" not in c else c.auth_type|upper }}
+from flask_appbuilder.security.manager import {{ "AUTH_DB" if "auth_type" not in f else f.auth_type|upper }}
 
 # from flask_appbuilder.security.manager import AUTH_LDAP
 # from flask_appbuilder.security.manager import AUTH_OAUTH
@@ -49,7 +50,7 @@ WTF_CSRF_ENABLED = {{ "True" if "wtf_csrf_enabled" not in c else c.wtf_csrf_enab
 # AUTH_LDAP : Is for LDAP
 # AUTH_REMOTE_USER : Is for using REMOTE_USER from web server
 # AUTH_OAUTH : Is for OAuth
-AUTH_TYPE = {{ "AUTH_DB" if "auth_type" not in c else c.auth_type }}
+AUTH_TYPE = {{ "AUTH_DB" if "auth_type" not in f else f.auth_type }}
 
 # Uncomment to setup Full admin role name
 AUTH_ROLE_ADMIN = '{{ "Admin" if "auth_role_admin" not in c else c.auth_role_admin }}'
