--- a/airflow/files/default/airflowV2.cfg.jinja
+++ b/airflow/files/default/airflowV2.cfg.jinja
@@ -217,6 +217,9 @@ lazy_discover_providers = True
 # Currently it is only used in ``DagFileProcessor.process_file`` to retry ``dagbag.sync_to_db``.
 max_db_retries = 3
 
+# UI to hide sensitive variable fields when set to True
+hide_sensitive_var_conn_fields = True
+
 [logging]
 # The folder where airflow should store its log files
 # This path must be absolute
@@ -417,6 +420,9 @@ default_gpus = 0
 # Is allowed to pass additional/unused arguments (args, kwargs) to the BaseOperator operator.
 # If set to False, an exception will be thrown, otherwise only the console message will be displayed.
 allow_illegal_arguments = False
+
+# Default queue that tasks get assigned to and that worker listen on.
+default_queue = {{ 'default' if 'default_queue' not in c.operators else c.operators.default_queue }}
 
 [hive]
 # Default mapreduce queue for HiveOperator tasks
@@ -709,9 +715,6 @@ flower_port = {{ '5555' if 'flower_port' not in c.celery else c.celery.flower_po
 # Example: flower_basic_auth = user1:password1,user2:password2
 flower_basic_auth = {{ '' if 'flower_basic_auth' not in c.celery else c.celery.flower_basic_auth }}
 
-# Default queue that tasks get assigned to and that worker listen on.
-default_queue = {{ 'default' if 'default_queue' not in c.celery else c.celery.default_queue }}
-
 # How many processes CeleryExecutor uses to sync task state.
 # 0 means to use max(1, number of cores - 1) processes.
 sync_parallelism = 0
@@ -890,9 +893,6 @@ keytab = {{ 'airflow.keytab' if 'keytab' not in c.kerberos else c.kerberos.keyta
 api_rev = v3
 
 [admin]
-# UI to hide sensitive variable fields when set to True
-hide_sensitive_variable_fields = True
-
 # A comma-separated list of sensitive keywords to look for in variables names.
 sensitive_variable_fields =
 
