--- a/airflow/files/default/airflowV2.cfg.jinja
+++ b/airflow/files/default/airflowV2.cfg.jinja
@@ -1,3 +1,4 @@
+# yamllint disable
 #######################################################################
 # File managed by Salt at <{{ source }}>.
 # Your changes may be overwritten.
