fix(service): start service after network.start

--- a/airflow/files/default/systemd.ini.jinja
+++ b/airflow/files/default/systemd.ini.jinja
@@ -3,8 +3,8 @@
 #########################################################
 [Unit]
 Description={{ desc }}
-Wants=network-online.target {{ wants }}
-After=netwrok-online.target {{ after }}
+Wants=network-online.target
+After=network-online.target
 Documentation={{ doc }}
 
 [Service]
