--- a/airflow/files/default/systemd.ini.jinja
+++ b/airflow/files/default/systemd.ini.jinja
@@ -16,6 +16,7 @@ ExecStart={{ start }}{{ ' -q ' + queues if 'celery-worker' in name and queues el
 ExecStop={{ stop }}
 PIDFile=/var/run/{{ name }}.pid
 Environment="PATH={{ workdir }}/bin:$PATH:/usr/local/bin:/bin:/usr/bin:/usr/local/sbin:/usr/sbin"
+Environment="{{ pgpass_string }}"
 Restart=always
 RestartSec=3
 
